# project_lab

./: .gitignore  LICENSE  LICENSE.md  README.md  license.mit.md  main.py  main2.py  main3.py  pyproject.toml  requirements.txt
app/: adapters.py  app.py  builder.py  circular_mesh.py  data_acquire.py  data_types.py  factory.py  measurement.py  measurement_registry.py  overseer.py  pipeline_skeletton.py
gui/: adapter.py  gui.py  heatmap_display.py  plot.py  real_time_plot.py  visualizer.py  voltage_plot.py
pipelines/: README.md  circular_mesh.py  pipeline_skeletton.py  registry.py
pipelines/models/: knn.pkl  model_denoising.keras
simulation/: 13_10_2023_capture.txt  simulation.txt
