[project]
name = "pyeit-framework"
version = "0.1.0"
description = "This module is a framework to work with the pyeit package. It provides a GUI for plotting different meshes and selection of parameters. Only the processing in the pipeline needs to be implemented by the user."
authors = [
    {name = "Isaac Lucas de Lima Yuki",email = "isaacyuki@hotmail.com"},
    {name = "Ömer Faruk KANMAZ",email = "kanmazomerfaruk@outlook.com"},
    {name = "Thomas Harald Reinhard Rubin",email = "thomas.rubin2@protonmail.com"},
    {name = "Ivana Kotaras",email = "thomas.rubin2@protonmail.com"}
]
license = {text = "BSD License"}
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "meshpy (>=2025.1.1,<2026.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "pyqt6 (>=6.9,<6.10)",
    "shapely (>=2.1.1,<3.0.0)",
    "future (>=1.0.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "pyserial (>=3.5,<4.0)",
    "vispy (>=0.15.2,<0.16.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pyqt6-qt6 (>=6.9.0,<7.0.0)",
    "pyqt6-sip (>=13.10.2,<14.0.0)",
    "tensorflow-io-gcs-filesystem (>=0.31.0,<0.32.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "keras (>=3.5.0,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
